--- a/templates/elgammal.html
+++ b/templates/elgammal.html
@@ -350,7 +350,7 @@
             
                 const message = document.getElementById("message").value;
             
-                fetch('/hash_message', {
+                fetch('/hash_message_elgamal', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
